--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "webpack": "^5.39.0",
     "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "xterm": "^4.13.0"
   }
 }
